Fixed--image stretch on mobile v2

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -36,5 +36,5 @@ body {
 /* IMAGES */
 .img--camp {
     height: auto;
-    width: 100%;
+    min-width: 100%;
 }
